# awa

./: Cargo.toml  README.md  TODO.md
src/: app.rs  frame_mgr.rs  main.rs  main_loop.rs  platform_specific.rs  video.rs
src/platform_specific/: linux.rs  macos.rs  windows.rs
